# nova-verify

./: README.md  deploy-testnet.js  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  security_vulnerability.md
.github/workflows/: deploy.yml  performance-test.yml
backend/: .env.example  StorageOptimizer.ts  package.json
backend/src/: index.js
cli/: README.md  package.json
contracts/: CODE_OF_CONDUCT.md  COMPLIANCE.md  CONFIG.md  CONTRIBUTING.md  CONTRIBUTORS.md  GRANT_TREASURY_DOCUMENTATION.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IPFS_IMPLEMENTATION.md  PRIVACY.md  PROOF_API_PR_TEMPLATE.md  README.md  docker-compose.staging.yml  docker-compose.yml  package-lock.json  package.json
contracts/deployable/: Cargo.toml
contracts/deployable/src/: lib.rs  proof_verifier.rs
docs/: ADVANCED_SECURITY_FEATURES.md  BACKEND_ISSUES.md  COMPLIANCE_IMPLEMENTATION.md  DATABASE_OPTIMIZATION.md  DECENTRALIZED_STORAGE_README.md  EVENT_DRIVEN_ARCHITECTURE_PR.md  EVENT_SOURCING_PR.md  FINAL_PR_INSTRUCTIONS.md  FORM_BUILDER_PR.md  FORM_BUILDER_README.md  GAS_OPTIMIZATION_GUIDE.md  GAS_OPTIMIZATION_README.md  GITHUB_AUTH.md  IMPLEMENTATION_COMPLETE.md  MULTISIG_IMPLEMENTATION.md  PR_139_DESCRIPTION.md  PR_ADVANCED_SECURITY.md  PR_CONTENT.md  PR_DESCRIPTION_FINAL.md  PR_DESCRIPTION_RATE_LIMITING.md  PR_DESCRIPTION_SECURITY.md  PR_INSTRUCTIONS.md  PR_VERINODE_AI_SEARCH.md  PR_VERINODE_INSTRUCTIONS.md  PULL_REQUEST_BACKEND_ISSUES.md  PULL_REQUEST_SUMMARY.md  PUSH_TO_REPOSITORY.md  REST_API_DOCUMENTATION.md
examples/: JavaBasicExample.java  README.md  go_basic_example.go  python_basic_example.py  rust_basic_example.rs
frontend/: .env.example
nova-verify-sdk/: package.json
scripts/: GIT_COMMANDS.bat  PushToRepository.ps1  contract-monitor.js  deploy.sh  deploy_proof_verifier.js  docs-generator.ts  ipfsSetup.js  main.tf  push_to_fork.bat  rollback.sh  searchIndexing.js  test_optimization.bat
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: client.rs  config.rs  error.rs  lib.rs
sdks/rust/src/services/: mod.rs  proof.rs  verification.rs  wallet.rs
sdks/rust/src/types/: mod.rs
sdks/rust/src/utils/: http.rs  mod.rs  websocket.rs
(+151 files in other folders)
