[package]
name = "nova-verify-proof-verifier"
version = "0.1.0"
edition = "2021"
description = "Nova Verify ProofVerifier - Soroban smart contract for cryptographic proof verification"
authors = ["Nova Verify Team"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
